--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "projeto-nodejs-rest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "consign": "^0.1.6",
     "nodemon": "^2.0.7"
   }
 }
