--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "nodemon": "^2.0.7"
   }
